# Cpp_Program

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DatabaseInitializer.cpp  README.md  SeatDatabase.h  roi_annotator.cpp  seat_basic_yolo.cpp  test_database.db  video_check&clipping.cpp
apps/: AnnotateSeatStates.cpp  AnnotateTables.cpp  a_demo.cpp  annotate_person.cpp  annotate_seat_states.cpp  annotate_tables.cpp  frame_extract.cpp  test_perf.cpp
build-release/: CMakeCache.txt
config/: test_seats.json  vision.yml
include/: data_structures.hpp  seat_state_judger.hpp
include/seatui/admin/: admin_window.hpp
include/seatui/launcher/: login_window.hpp  role_selector.hpp
include/seatui/student/: student_window.hpp
include/vision/: Config.h  FrameExtractor.h  FrameProcessor.h  Mog2.h  OrtYolo.h  Snapshotter.h  Types.h  VisionA.h
logs/: test_seat_states.jsonl
logs/fine-tuning/: run_summary.json  train_metrics.json
runtime/: last_frame.json  last_frame.jsonl
scripts/: generate_pseudo_labels.py  select_manual_frames.py  test_yolov8n_onnx.py  train_person_finetune.py
src/: main.cpp  seat_state_judger.cpp
src/admin_app/: admin_window.cpp
src/database/: DatabaseInitializer.h  SeatDatabase.cpp
src/launcher_app/: login_window.cpp  main.cpp  role_selector.cpp
src/student_app/: student_window.cpp
src/vision/: Config.cpp  FrameExtractor.cpp  FrameProcessor.cpp  Mog2.cpp  Nms.cpp  OrtYolo.cpp  SeatRoi.cpp  Snapshotter.cpp  Types.cpp  VisionA.cpp
test/: CMakeLists.txt  test_seat_states.cpp
tests/: CompileBuildTest.cpp  DatabaseTest.cpp  test.cpp  test_imread.cpp  test_seat_database.cpp
